bug fixed for picture not showing up

--- a/Style/index.css
+++ b/Style/index.css
@@ -7,7 +7,7 @@
 }
 body{
     background: #e4e9f7;
-    background-image: url('Image/chevron_new_img.jpg');
+    background-image: url('../Image/chevron_new_img.jpg');
     background-size: cover;
     background-position: center;
 }
